tests/ui/type-alias-impl-trait/issue-52843-closure-constrain.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/issue-52843-closure-constrain.rs:11:50
   |
LL |     let null = #[defines(Opaque)] || -> Opaque { 0 };
   |                                                  ^ expected `String`, got `i32`
   |
note: previous use here
  --> $DIR/issue-52843-closure-constrain.rs:10:30
   |
LL |     fn _unused() -> Opaque { String::new() }
   |                              ^^^^^^^^^^^^^

error: aborting due to 1 previous error

